--- a/src/app/projet/menu/menu.component.html
+++ b/src/app/projet/menu/menu.component.html
@@ -1,36 +1,72 @@
-
-
-<div class="body">
-  <nav>
-    <h1>Accueil</h1>
-    <div class="onglets">
-      <p class="link" routerLink="/data-mail" routerLinkActive="active">Create-email-data</p>
-      <p class="link" routerLink="/prio" routerLinkActive="active">Country</p>
-      <p class="link" routerLink="/cat" routerLinkActive="active">Categorie</p>
-      <form>
-        <input type="search" placeholder="Rechercher">
-      </form>
-
-      <p class="link" routerLink="/connexion" routerLinkActive="active">Login out </p>
-      <p><i class="far fa-heart"></i></p>
-      <p>bonjour{{userLogin.fistName}}</p>
-    </div>
-  </nav>
-  <div class="container">
-    <router-outlet></router-outlet>
+<input type="checkbox" id="sidebar-toggle" xmlns="http://www.w3.org/1999/html">
+<div class="sidebar">
+  <div class="sidebar-header">
+    <h3 class="brand">
+      <span class="ti-unlink"></span>
+      <span>Ifrozet Sarl</span>
+    </h3>
+    <label for="sidebar-toggle">
+      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list"
+           viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+              d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+      </svg>
+    </label>
+  </div>
+  <div class="sidebar-menu">
+    <ul>
+      <li>
+        <a routerLink="/UniNfz" routerLinkActive="active">
+          <span class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pie-chart"
+                 viewBox="0 0 16 16">
+               <path
+                 d="M7.5 1.018a7 7 0 0 0-4.79 11.566L7.5 7.793V1.018zm1 0V7.5h6.482A7.001 7.001 0 0 0 8.5 1.018zM14.982 8.5H8.207l-4.79 4.79A7 7 0 0 0 14.982 8.5zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
+            </svg>
+          </span>
+          <span>UniNFZ </span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="Agra-Tech" routerLinkActive="active">
+          <span>Agra-Tech </span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="Ifrozet-IT" routerLinkActive="active">
+          <span>Ifrozet-IT </span>
+        </a>
+      </li>
+    </ul>
   </div>
 </div>
+<div class="main-content">
+  <header>
+    <div class="search-wrapper">
+      <span class="icon">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+             viewBox="0 0 16 16">
+          <path
+            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+        </svg>
+      </span>
+      <input type="search" placeholder="Search">
+      <h4>hicham</h4>
+      <span class="icon">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+             viewBox="0 0 16 16">
+          <path
+            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+        </svg>
+      </span>
+      <h4>Logout</h4>
+    </div>
+  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
 
-<!-- Pied de page -->
-<footer>
-  <p>&copy; Contactez-nous au +2126 33 55 82 11</p>
-  <div class="social-media">
-    <p><i class="fab fa-facebook-f"></i></p>
-    <p><i class="fab fa-twitter"></i></p>
-    <p><i class="fab fa-instagram"></i></p>
-    <p><i class="fab fa-linkedin-in"></i></p>
-  </div>
-</footer>
-<!-- Fin du pied de page -->
+
 
 
