--- a/src/app/projet/login/login.component.html
+++ b/src/app/projet/login/login.component.html
@@ -1,57 +1,33 @@
 
-<div class="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-md" style="margin-top: 20px">
-        <h4>home</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm">
-        Premiere test page home
-      </div>
-      <div class="vertical-line">
-      </div>
-      <div class="col-sm">
-        <div class="container">
-          <form #loginForm="ngForm" (ngSubmit)="loginUser()">
-            <small class="text-danger">{{msg}}</small>
-            <h1 style="text-align: center">LOGIN</h1>
-            <label><b>Nom or mail</b></label>
-            <input type="email" placeholder="user or mail" name="email" [(ngModel)]="user.email">
-            <label><b>Mot de passe</b></label>
-            <input type="password" placeholder="password" name="password" [(ngModel)]="user.password">
-            <input type="submit"  value="Login">
-            <div class="row">
-              <div class="col-sm">
-                <div class="custom-checkbox"><input type="checkbox">Remember me</div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm">
-              </div>
-              <div class="col-sm">
-                <a href="#" ><p>Forget password</p></a>
-              </div>
-            </div>
-          </form>
+<div class="row">
+  <div class="col-md-6 bordre">
+   <h4>Test log in</h4>
+  </div>
+  <div class="col-md-6">
+    <div class="container">
+      <form #loginForm="ngForm" (ngSubmit)="loginUser()">
+        <small class="text-danger">{{msg}}</small>
+        <h1 style="text-align: center">LOGIN</h1>
+        <label><b>Nom or mail</b></label>
+        <input type="email" placeholder="user or mail" name="email" [(ngModel)]="user.email">
+        <label><b>Mot de passe</b></label>
+        <input type="password" placeholder="password" name="password" [(ngModel)]="user.password">
+        <input type="submit"  value="Login">
+        <div class="row">
+          <div class="col-sm">
+            <div class="custom-checkbox"><input type="checkbox">Remember me</div>
+          </div>
         </div>
-      </div>
+        <div class="row">
+          <div class="col-sm">
+          </div>
+          <div class="col-sm">
+            <a href="#" ><p>Forget password</p></a>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
 
-
-
-<!-- Pied de page
-<footer>
-  <p>&copy; Contactez-nous au +2126 33 55 82 11</p>
-  <div class="social-media">
-    <p><i class="fab fa-facebook-f"></i></p>
-    <p><i class="fab fa-twitter"></i></p>
-    <p><i class="fab fa-instagram"></i></p>
-    <p><i class="fab fa-linkedin-in"></i></p>
-  </div>
-</footer>
- Fin du pied de page -->
 
