--- a/src/app/projet/menu/menu.component.css
+++ b/src/app/projet/menu/menu.component.css
@@ -1,10 +1,433 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-@import url('https://use.fontawesome.com/releases/v5.13.0/css/all.css');
-.body{
-  margin:0px;
-  padding: 0px;
-  font-family: 'Open Sans', sans-serif;
+
+/* You can add global styles to this file, and also import other style files */
+@Import "~font-awesome/css/font-awesome.min.css";
+@font-face {
+  font-family: "Poppins";
+  src: url('/font/Poppins-ExtraBold.ttf');
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style-type: none;
+  box-sizing: border-box;
+}
+
+#sidebar-toggle {
+  display: none;
+}
+
+.sidebar {
+  height: 100%;
+  width: 240px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  background: #1D2231;
+  color: #fff;
+  overflow-y: auto;
+  transition: width 500ms;
+}
+
+.sidebar-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  padding: 0rem 1rem;
+}
+
+.sidebar-menu {
+  padding: 1.3rem;
+}
+
+.sidebar li {
+  margin-bottom: 2rem;
+}
+
+.sidebar a {
+  color: #fff;
+  font-size: 1rem;
+}
+
+.sidebar a span:last-child {
+  padding-left: .6rem;
+}
+
+#sidebar-toggle:checked ~ .sidebar {
+  width: 70px;
+}
+
+#sidebar-toggle:checked ~ .sidebar .sidebar-header h3 span,
+#sidebar-toggle:checked ~ .sidebar li span:last-child {
+  display: none;
+}
+
+#sidebar-toggle:checked ~ .sidebar .sidebar-header,
+#sidebar-toggle:checked ~ .sidebar li {
+  display: flex;
+  justify-content: center;
+}
+
+#sidebar-toggle:checked ~ .main-content {
+  margin-left: 60px;
+}
+
+#sidebar-toggle:checked ~ .main-content header {
+  left: 70px;
+  width: calc(100% - 70px);
+}
+
+.main-content {
+  position: relative;
+  margin-left: 240px;
+  transition: margin-left 500ms;
+}
+
+header {
+  position: fixed;
+  left: 240px;
+  top: 0;
+  z-index: 100;
+  width: calc(100% - 240px);
+  background: #fff;
+  height: 60px;
+  padding: 0rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
+  transition: left 500ms;
+}
+
+.search-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.search-wrapper input {
+  border: 0;
+  outline: 0;
+  padding: 1rem;
+  height: 20px;
+}
+
+.social-icons {
+  display: flex;
+  align-items: center;
+}
+
+.social-icons span,
+.social-icons div {
+  margin-left: 1.2rem;
+}
+
+.social-icons div {
+  height: 38px;
+  width: 38px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+}
+
+main {
+  margin-top: 60px;
+  background: #f1f5f9;
+  min-height: 90vh;
+  padding: 1rem 3rem;
+}
+
+.dash-title {
+  color: #1D2231;
+  margin-bottom: 1rem;
+}
+
+.dash-cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 3rem;
+}
+
+.card-single {
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+}
+
+.card-body {
+  padding: 1.3rem 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.card-body span {
+  font-size: 1.5rem;
+  color: #777;
+  padding-right: 1.4rem;
+}
+
+.card-body h5 {
+  color: #8390A2;
+  font-size: 1rem;
+}
+
+.card-body h4 {
+  color: #1D2231;
+  font-size: 1.1rem;
+  margin-top: .2rem;
+}
+
+.card-footer {
+  padding: .2rem 1rem;
+  background: #f9fafc;
+}
+
+.card-footer a {
+  color: #027581;
+}
+
+.recent {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.activity-grid {
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-column-gap: 1.5rem;
+}
+
+.activity-card,
+.summary-card,
+.bday-card {
+  background: #fff;
+  border-radius: 7px;
+}
+
+.activity-card h3 {
+  color: #8390A2;
+  margin: 1rem;
+}
+
+.activity-card table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.activity-card thead {
+  background: #efefef;
+  text-align: left;
+}
+
+th, td {
+  font-size: .9rem;
+  padding: 1rem 1rem;
+  color: #1D2231;
+}
+
+td {
+  font-size: .8rem;
+}
+
+tbody tr:nth-child(even) {
+  background: #f9fafc;
+}
+
+.badge {
+  padding: .2rem 1rem;
+  border-radius: 20px;
+  font-weight: 700;
+  font-size: .7rem;
+}
+
+.badge.success {
+  background: #DEF7EC;
+  color: #027581;
+}
+
+.badge.warning {
+  background: #F0F6B2;
+  color: orange;
+}
+
+.td-team {
+  display: flex;
+  align-items: center;
+}
+
+.img-1,
+.img-2,
+.img-3 {
+  height: 38px;
+  width: 38px;
+  border-radius: 50%;
+  margin-left: -15px;
+  border: 3px solid #efefef;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.img-1 {
+}
+
+.img-2 {
+}
+
+.img-3 {
+}
+
+.summary-card {
+  margin-bottom: 1.5rem;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+
+.summary-single {
+  padding: .5rem 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.summary-single span {
+  font-size: 1.5rem;
+  color: #777;
+  padding-right: 1rem;
+}
+
+.summary-single h5 {
+  color: #027581;
+  font-size: 1.1rem;
+  margin-bottom: 0rem !important;
+}
+
+.summary-single small {
+  font-weight: 700;
+  color: #8390A2;
+}
+
+.bday-flex {
+  display: flex;
+  align-items: center;
+  margin-bottom: .3rem;
+}
+
+.bday-card {
+  padding: 1rem;
+}
+
+.bday-img {
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  border: 3px solid #efefef;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-right: .7rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-center button {
+  background: #027581;
+  color: #fff;
+  border: 1px solid #027581;
+  border-radius: 4px;
+  padding: .4rem 1rem;
+}
+
+.table-responsive {
+  overflow-x: auto;
+}
+
+@media only screen and (max-width: 1200px) {
+  .sidebar {
+    width: 60px;
+    z-index: 150;
+  }
+
+  .sidebar .sidebar-header h3 span,
+  .sidebar li span:last-child {
+    display: none;
+  }
+
+  .sidebar .sidebar-header,
+  .sidebar li {
+    display: flex;
+    justify-content: center;
+  }
+
+  .main-content {
+    margin-left: 60px;
+  }
+
+  .main-content header {
+    left: 60px;
+    width: calc(100% - 60px);
+  }
+
+  #sidebar-toggle:checked ~ .sidebar {
+    width: 240px;
+  }
+
+  #sidebar-toggle:checked ~ .sidebar .sidebar-header h3 span,
+  #sidebar-toggle:checked ~ .sidebar li span:last-child {
+    display: inline;
+  }
+
+  #sidebar-toggle:checked ~ .sidebar .sidebar-header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  #sidebar-toggle:checked ~ .sidebar li {
+    display: block;
+  }
+
+  #sidebar-toggle:checked ~ .main-content {
+    margin-left: 60px;
+  }
+
+  #sidebar-toggle:checked ~ .main-content header {
+    left: 60px;
+  }
+}
+@media only screen and (max-width: 860px) {
+  .dash-cards {
+    grid-template-columns: repeat(2,1fr);
+  }
+
+  .card-single {
+    margin-bottom: 1rem;
+  }
+
+  .activity-grid {
+    display: block;
+  }
+
+  .summary {
+    margin-top: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .dash-cards {
+    grid-template-columns: 100%;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  main {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
 /* Barre de navigation */
 nav{
   display:flex;
@@ -28,43 +451,11 @@ nav .onglets p{
   cursor:pointer;
 }
 nav .onglets input{
-  margin: -6px 20px;
-  padding: 7px;
+  margin: 8px 20px;
+  padding: 15px;
   border-radius: 30px;
   border:none;
   background-color: #f2f2f2;
   outline:none;
 }
 /* Fin de la barre de navigation */
-/* Pied de page */
-footer {
-  margin-top: 100px;
-  background-color: #000;
-  padding: 30px;
-  color: #fff;
-  display: flex;
-  flex-wrap:wrap;
-  justify-content: space-between;
-}
-footer .social-media{
-  display: flex;
-}
-footer .social-media p{
-  margin-right: 15px;
-  border: 1px solid #fff;
-  border-radius: 100%;
-  padding: 5px;
-  text-align:center;
-  width: 20px;
-  cursor:pointer;
-}
-/* Fin du pied de page */
-
-@media screen and (max-width: 640px){
-  nav .onglets .link, nav h1{
-    display:none;
-  }
-  .cards .card img{
-    width: 300px;
-  }
-}
