--- a/src/app/projet/dashboard/dashboard.component.html
+++ b/src/app/projet/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="card-footer size">
-      <a>View all</a>
+      <a routerLink="/menu/UniNfz" routerLinkActive="active">View all</a>
     </div>
   </div>
 
