--- a/src/app/projet/email/chek-email/chek-email.component.html
+++ b/src/app/projet/email/chek-email/chek-email.component.html
@@ -31,10 +31,10 @@
     </div>
     <div class="row">
         <div class="col-md-8">
-          <button type="submit" class="btn btn-dark" name="checked" (click)="checked()">Checked</button>
+          <button type="submit" class="btn btn-dark" name="checked" *ngIf="user.stateUser!='active'" (click)="checked()">Checked</button>
           <button type="submit" class="btn btn-dark" name="clear" (click)="clear()">Clear</button>
           <button type="submit" class="btn btn-dark" name="return" (click)="return()"><-Back</button>
-          <button type="submit" class="btn btn-dark" name="return">Copy</button>
+          <button type="submit" class="btn btn-dark" name="return" *ngIf="user.stateUser!='active'">Copy</button>
         </div>
     </div>
     <br><br>
