--- a/src/app/projet/email/fct-email-data-detail/fct-email-data-detail.component.html
+++ b/src/app/projet/email/fct-email-data-detail/fct-email-data-detail.component.html
@@ -10,6 +10,9 @@
         <th class="centry">country</th>
         <th class="centry">state</th>
         <th class="centry">user Ref</th>
+        <th class="centry">city</th>
+        <th class="centry">post code</th>
+        <th class="centry">Phone</th>
         </thead>
         <tbody>
         <tr *ngFor="let e of emailDatas; index as i">
@@ -19,6 +22,9 @@
           <td class="centry">{{e.ct_id.reference}}</td>
           <td class="centry">{{e.state_id.name}}</td>
           <td class="centry">{{e.user_id.reference}}</td>
+          <td class="centry">{{e.city}}</td>
+          <td class="centry">{{e.codePost}}</td>
+          <td class="centry">{{e.phone}}</td>
         </tr>
         </tbody>
       </table>
