--- a/src/app/projet/home/home.component.html
+++ b/src/app/projet/home/home.component.html
@@ -97,13 +97,17 @@
 ">
   <div class="container-fluid">
     <div class="navbar-header nav-bar-left">
-      copy
+      Copyright: Ifrozet Sarl  Business-Intelligence-Service
     </div>
     <div class="navbar-header">
-      copy
+    </div>
+    <div class="navbar-header">
+    </div>
+    <div class="navbar-header">
+      selement un test
     </div>
     <ul class="nav navbar-nav navbar-right">
-      selement un test
+      Software Development
     </ul>
   </div>
 </nav>
