--- a/src/app/projet/uni-nfz/uni-nfz.component.html
+++ b/src/app/projet/uni-nfz/uni-nfz.component.html
@@ -22,6 +22,12 @@
     </li>
     <li>
       <p>
+        <Strong><a routerLink="/menu/detail" routerLinkActive="active">
+          Details emails:</a></Strong>
+      </p>
+    </li>
+    <li>
+      <p>
         <Strong><a routerLink="/menu/**" routerLinkActive="active">
           Modification Status more emails :</a></Strong>
       </p>
