--- a/src/app/projet/profil/profil.component.html
+++ b/src/app/projet/profil/profil.component.html
@@ -1,9 +1,12 @@
 <p>profil works!</p>
 <div>email:{{this.user.email}}</div>
-<div>name first {{this.user.firstName}}</div>
-<div>ref {{this.user.reference}}</div>
-<div>ville {{this.user.ville}}</div>
-<div>last {{this.user.lastName}}</div>
-<div>pass {{this.user.password}}</div>
-<div>ref {{this.user.ct_id.reference}}</div>
-<div>tel {{this.user.phone}}</div>
+<div>name first :{{this.user.firstName}}</div>
+<div>ref :{{this.user.reference}}</div>
+<div>ville :{{this.user.ville}}</div>
+<div>last :{{this.user.lastName}}</div>
+<div>pass :{{this.user.password}}</div>
+<div>ref :{{this.user.ct_id.reference}}</div>
+<div>tel :{{this.user.phone}}</div>
+<div>state :{{this.user.stateUser}}</div>
+
+
